[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/trinkets/TrinketButton.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sheets/16x16_various.png" type="Texture" id=2]

[node name="TrinketButton" type="Control"]
modulate = Color( 0.792157, 0.780392, 0.721569, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -92.0
margin_bottom = -176.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureButton"]
position = Vector2( -3, -3 )
texture = ExtResource( 2 )
centered = false
vframes = 15
hframes = 16

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="TextureButton" to="." method="_on_Button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_Button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
